# openwrt-imagegen-profiles

./: .gitignore  AI_CONTRIBUTING.md  AI_WORKFLOW.md  ARCHITECTURE.md  BUILD_PIPELINE.md  CODE_OF_CONDUCT.md  DB_MODELS.md  FRONTENDS.md  PROFILES.md  README.md  SAFETY.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 164336717196_initial_schema_with_profiles_.py
docs/: AI_CONTRIBUTING.md  AI_WORKFLOW.md  ARCHITECTURE.md  BUILD_PIPELINE.md  CONTRIBUTING.md  DEVELOPMENT.md  FRONTENDS.md  INTERFACES.md  OPERATIONS.md  PROFILES.md  SAFETY.md  WEB_GUI_FRONTEND_DESIGN.md  WEB_GUI_PLAN.md
mcp_server/: __init__.py  errors.py  schemas.py  server.py
openwrt_imagegen/: __init__.py  __main__.py  cli.py  config.py  db.py  types.py
openwrt_imagegen/builds/: __init__.py  artifacts.py  cache_key.py  models.py  overlay.py  runner.py  service.py
openwrt_imagegen/flash/: __init__.py  device.py  models.py  service.py  writer.py
openwrt_imagegen/imagebuilder/: __init__.py  fetch.py  models.py  service.py
openwrt_imagegen/profiles/: __init__.py  io.py  models.py  schema.py  service.py
profiles/: home-ap-bedroom.yaml  home-ap-livingroom.yaml  lab-router1-extended.yaml  lab-router1-snapshot.yaml
tests/: __init__.py  test_builds_artifacts.py  test_builds_cache_key.py  test_builds_overlay.py  test_builds_runner.py  test_builds_service.py  test_cli.py  test_cli_json_output.py  test_config.py  test_flash_device.py  test_flash_service.py  test_flash_writer.py  test_imagebuilder_fetch.py  test_imagebuilder_service.py  test_mcp_tools.py  test_models.py  test_profiles_io.py  test_profiles_schema.py  test_profiles_service.py  test_types.py  test_web_api.py  test_web_gui.py
web/: __init__.py  app.py  deps.py
web/routers/: __init__.py  builders.py  builds.py  config.py  flash.py  gui.py  health.py  profiles.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: base.html  dashboard.html
web/templates/builds/: detail.html  list.html
web/templates/flash/: detail.html  list.html  wizard.html
web/templates/profiles/: detail.html  list.html
