[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwrt-imagegen"
version = "0.1.0"
description = "Opinionated tooling for managing OpenWrt Image Builder runs and TF/SD card flashing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["openwrt", "firmware", "image-builder", "embedded"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "typer>=0.9",
    "rich>=13.0",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.6",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "freezegun>=1.2",
    "types-PyYAML>=6.0",
]
web = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "orjson>=3.9",
    "python-multipart>=0.0.6",
]
postgres = [
    "psycopg[binary]>=3.1",
]
ops = [
    "pyudev>=0.24",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
imagegen = "openwrt_imagegen.cli:app"

[project.urls]
Repository = "https://github.com/grammy-jiang/openwrt-imagegen-profiles"
Documentation = "https://github.com/grammy-jiang/openwrt-imagegen-profiles/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["openwrt_imagegen", "mcp_server"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["openwrt_imagegen", "mcp_server", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117", "ARG002"]  # Allow nested with statements and unused arguments in tests
"mcp_server/*" = ["B008"]  # Allow Depends() and Field() in FastMCP tool defaults
"web/*" = ["B008"]  # Allow Depends() and Query() in FastAPI function defaults

[tool.ruff.lint.isort]
known-first-party = ["openwrt_imagegen", "mcp_server", "web"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mcp_server.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "flash: marks tests that involve flashing logic",
]

[tool.coverage.run]
source = ["openwrt_imagegen"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
